--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="img/hero.jpg" alt="imagen hero" />
       </div>
 
-      <main>
+      <main class="main">
         <h2>Nuestros Productos</h2>
         <ul class="lista-productos">
           <li>
